--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,11 @@
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3"
+    "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/lucid-slugify": "^1.0.3",
+    "@adonisjs/redis": "^2.0.7",
+    "adonis-kue": "^5.0.1",
+    "pg": "^7.10.0"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
